# haskell-book

chapter01/: Chapter01.txt
chapter02/: Exercises.hs
chapter03/: Exercises.hs  Reverse.hs
chapter04/: Exercises.hs
chapter05/: Exercises.hs
chapter06/: Exercises.hs
chapter07/: Exercises.hs  arith4.hs
chapter08/: Exercises.hs
chapter09/: Exercises.hs
chapter10/: Exercises.hs
chapter11/: Exercises.hs  Phone1.hs  Phone2.hs
chapter12/: Exercises.hs
chapter13/: Exercises.hs
chapter13/hangman/: hangman.cabal
chapter13/hangman/src/: Main.hs
chapter13/hello/: stack.yaml
chapter14/addition/: Addition.hs  addition.cabal
chapter14/exercises/: exercises.cabal
chapter14/exercises/src/: Cipher.hs  Hangman.hs  Main.hs  WordNumber.hs
chapter14/exercises/test/: CipherTest.hs  Failure.hs  Generator.hs  HangmanTest.hs  Idempotence.hs  UsingQuickCheck.hs  WordNumberTest.hs
chapter14/morse/: LICENSE  morse.cabal
chapter14/morse/src/: Main.hs  Morse.hs
chapter15/exercises/: Main.hs  MonoidExercises.hs  SemigroupExercises.hs  exercises.cabal
chapter16/exercises/: Chapter.hs  Exercises.hs  Instances.hs  exercises.cabal
chapter17/exercises/: Chapter.hs  Exercises.hs  ListApplicative.hs  ZipListApplicative.hs  exercises.cabal
chapter18/exercises/: Exercises.hs  exercises.cabal
chapter19/shawty-prime/: LICENSE
chapter20/: Exercises.hs
