name:               exercises
version:            0.1.0.0
author:             Bruce Alspaugh
maintainer:         alspaughb@gmail.com
category:           Text
build-type:         Simple
cabal-version:      >=1.10

library
  exposed-modules:     Main
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010

test-suite SemigroupTest
  hs-source-dirs:      .
  main-is:             SemigroupExercises.hs
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                     , QuickCheck
  default-language:    Haskell2010

test-suite MonoidTest
  hs-source-dirs:      .
  main-is:             MonoidExercises.hs
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.7 && <5
                     , QuickCheck
  default-language:    Haskell2010
