name:               exercises
version:            0.1.0.0
author:             Bruce Alspaugh
maintainer:         alspaughb@gmail.com
copyright:          2019 Bruce Alspaugh
build-type:         Simple
cabal-version:      >=1.10

library
  exposed-modules:    Exercises
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , QuickCheck
                    , checkers
  hs-source-dirs:     .
  default-language:   Haskell2010

